--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,9 +1,12 @@
 .card{
-    display:inline-block;
+    display:inline-flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
     border-radius:10px;
     color:$color-light;
-    padding:3rem;
-    max-width: 28rem;
+    padding:3rem 1rem;
+    // max-width: 28rem;
     
     @include respond('tab-land'){
         max-width: none;
@@ -13,23 +16,25 @@
     }
 
     &>*{
-        white-space:wrap;
+        //white-space:wrap;
     }
 
     &__header{
         text-align: center;
-        min-height: 30%;
-        height: 13rem;
+        height: auto;
+        padding-bottom:2rem;
+        // min-height: 30%;
+        // height: 13rem;
         @include respond('tab-land'){
-            height: 10rem;
+            //height: 10rem;
         }
         @include respond('phone'){
-            min-height: 8rem;
+            //min-height: 8rem;
         }
     }
     &__title{
         font-weight: bold;
-        font-size: $text-med;
+        font-size: $text-small-big;
         letter-spacing: 3px;
         text-transform: uppercase;
         @include respond('tab-land'){
@@ -66,18 +71,18 @@
         &__row{
             display:flex;
             flex-direction: row;
-            align-items: start;
-            justify-content: space-between;
+            align-items: stretch;
+            justify-content: start;
 
             & .card{
-                max-width: none;
+                max-width: 40%;
+                //width:33rem;
                 &:not(:last-child){
-                    margin-right:2rem;
+                    margin-right:1.5rem;
                 }
                 &__header{
-                    height: 9rem;
                     @include respond('tab-land'){
-                        height: 6rem;
+                       // height: 6rem;
                     }
                 }
                 @include respond('tab-land'){
@@ -86,7 +91,7 @@
             }
 
             &:not(:last-child){
-                margin-bottom:4rem;
+                margin-bottom:1.5rem;
                 @include respond('phone'){
                     margin-bottom:2rem;
                 }
