--- a/sass/pages/_services.scss
+++ b/sass/pages/_services.scss
@@ -45,6 +45,23 @@
                 animation:8s spin-fix linear infinite;
             }
         }
+
+        &__btm-wave{
+            position:absolute;
+            bottom:0;
+            left:0;
+            width: 35rem;
+        }
+        &__personalised-wave{
+            position:absolute;
+            top:60%;
+            right:0;
+        }
+        &__creative-wave{
+            top:20%;
+            left:0;
+            position:absolute;
+        }
     
         .zigzag-container{
             padding-right:8rem;
