--- a/css/style.css
+++ b/css/style.css
@@ -1219,10 +1219,31 @@ footer.footer {
   .services .section-services__row--creative .zigzag-container__image {
     width: 45rem;
     transform: translate(8rem, 6rem); }
+  .services .section-services__row--collaboration .zigzag-container__item-description .zigzag-container__image {
+    display: inline-block; }
+    @media only screen and (max-width: 37.5em) {
+      .services .section-services__row--collaboration .zigzag-container__item-description .zigzag-container__image {
+        display: none; } }
+  .services .section-services__row--collaboration .zigzag-container__item-presentation .zigzag-container__image {
+    display: none;
+    width: 20rem; }
+    @media only screen and (max-width: 37.5em) {
+      .services .section-services__row--collaboration .zigzag-container__item-presentation .zigzag-container__image {
+        display: inline-block; } }
   .services .section-services__row--web {
     margin-left: 10rem; }
   .services .section-services__row--personalised {
     transform: translateX(-30rem); }
+    .services .section-services__row--personalised .zigzag-container__item-description .zigzag-container__image {
+      display: inline-block; }
+      @media only screen and (max-width: 37.5em) {
+        .services .section-services__row--personalised .zigzag-container__item-description .zigzag-container__image {
+          display: none; } }
+    .services .section-services__row--personalised .zigzag-container__item-presentation .zigzag-container__image {
+      display: none; }
+      @media only screen and (max-width: 37.5em) {
+        .services .section-services__row--personalised .zigzag-container__item-presentation .zigzag-container__image {
+          display: inline-block; } }
   .services .section-services__row--merchandise {
     margin-left: 15rem; }
     .services .section-services__row--merchandise .zigzag-container__image {
